// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse default scripts ascii.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if signs.hasIndex(char) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors) == \\"string\\") then
r[0]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
else if (typeof(colors) == \\"list\\") then
r[0]=(([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts ascii.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

AsciiGen = {}
map = {}
map.a = [\\"||¯|| \\", \\"||_|| \\", \\"|| || \\"]
map.b = [\\"||¯/ \\", \\"|| \\\\ \\", \\"||_/ \\"]
map.c = [\\"||¯ \\", \\"||  \\", \\"||_ \\"]
map.d = [\\"||¯\\\\\\\\ \\", \\"|| // \\", \\"||//  \\"]
map.e = [\\"||¯ \\", \\"||- \\", \\"||_ \\"]
map.f = [\\"||¯ \\", \\"||_ \\", \\"||  \\"]
map.g = [\\"||¯¯  \\", \\"|| \\\\\\\\ \\", \\"||_|| \\"]
map.h = [\\"|| || \\", \\"||-|| \\", \\"|| || \\"]
map.i = [\\"|| \\", \\"|| \\", \\"|| \\"]
map.j = [\\" ¯||¯ \\", \\"  ||  \\", \\"|_||  \\"]
map.k = [\\"||  / \\", \\"|| /  \\", \\"||¯\\\\\\\\ \\"]
map.l = [\\"||  \\", \\"||  \\", \\"||_ \\"]
map.m = [\\"||\\\\\\\\/|| \\", \\"||   || \\", \\"||   || \\"]
map.n = [\\"||\\\\\\\\ || \\", \\"|| \\\\\\\\|| \\", \\"||  \\\\|| \\"]
map.o = [\\"||¯|| \\", \\"|| || \\", \\"||_|| \\"]
map.p = [\\"||¯|| \\", \\"||_|| \\", \\"||    \\"]
map.q = [\\"||¯||  \\", \\"|| ||  \\", \\"||_||¬ \\"]
map.r = [\\"||¯|| \\", \\"||¯\\\\\\\\ \\", \\"|| || \\"]
map.s = [\\"||¯¯ \\", \\" \\\\\\\\  \\", \\"__|| \\"]
map.t = [\\"¯||¯ \\", \\" ||  \\", \\" ||  \\"]
map.u = [\\"|| || \\", \\"|| || \\", \\"||_|| \\"]
map.v = [\\"\\\\\\\\ || \\", \\" \\\\\\\\|| \\", \\"  \\\\\\\\| \\"]
map.w = [\\"\\\\\\\\ |\\\\\\\\ | \\", \\" \\\\\\\\| \\\\\\\\| \\", \\"  \\\\\\\\  \\\\\\\\ \\"]
map.x = [\\"\\\\\\\\  / \\", \\" \\\\\\\\/  \\", \\" //\\\\  \\"]
map.y = [\\"\\\\\\\\  // \\", \\" \\\\\\\\//  \\", \\"  ||   \\"]
map.z = [\\"¯// \\", \\"//  \\", \\"||_ \\"]
map[\\"0\\"] = [\\"||¯|| \\", \\"||x|| \\", \\"||_|| \\"]
map[\\"1\\"] = [\\"'|| \\", \\" || \\", \\" || \\"]
map[\\"2\\"] = [\\"¯¯|| \\", \\"||¯  \\", \\"||_  \\"]
map[\\"3\\"] = [\\"¯|| \\", \\"-|| \\", \\"_|| \\"]
map[\\"4\\"] = [\\" /|| \\", \\"/_|| \\", \\"  || \\"]
map[\\"5\\"] = [\\"||¯¯ \\", \\" ¯|| \\", \\" _|| \\"]
map[\\"6\\"] = [\\"||¯¯  \\", \\"||¯|| \\", \\"||_|| \\"]
map[\\"7\\"] = [\\"¯¯// \\", \\" //  \\", \\"//   \\"]
map[\\"8\\"] = [\\"||¯|| \\", \\"||-|| \\", \\"||_|| \\"]
map[\\"9\\"] = [\\"||¯|| \\", \\"  ¯|| \\", \\"  //  \\"]
map[\\" \\"] = [\\"  \\", \\"  \\", \\"  \\"]
AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [[], [], []]
	signs = self.MAP

	for char in str
		char = char.lower

		if signs.hasIndex(char) then
			r[0].push(signs[char][0])
			r[1].push(signs[char][1])
			r[2].push(signs[char][2])
		end if
	end for

	if (typeof(colors) == \\"string\\") then
		r[0] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
	else if (typeof(colors) == \\"list\\") then
		r[0] = (([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
	end if

	return [r[0].join(\\"\\"), r[1].join(\\"\\"), r[2].join(\\"\\")].join(\\"\\\\n\\")
end function

print(AsciiGen.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts ascii.src uglify 1`] = `
Array [
  "globals.H=globals
H.x=\\"||¯|| \\"
H.w=\\"||_|| \\"
H.t=\\"|| || \\"
H.r=\\"||¯ \\"
H.v=\\"||  \\"
H.s=\\"||_ \\"
H.y=\\"||¯\\\\\\\\ \\"
H.u=\\"|| \\"
H.z=\\"  \\"
H._A=\\"<color=#\\"
H.AC=\\">\\"
H.AB=\\"</color>\\"
C={}
D={}
E=function(b)
if not C.hasIndex(b) then
exit(((\\"Module \\" + b) + \\" cannot be found...\\"))
end if
G=C[b]
return @G(b).exports
end function
I={}
J={}
J.a=[x,w,t]
J.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
J.c=[r,v,s]
J.d=[y,\\"|| // \\",\\"||//  \\"]
J.e=[r,\\"||- \\",s]
J.f=[r,s,v]
J.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",w]
J.h=[t,\\"||-|| \\",t]
J.i=[u,u,u]
J.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
J.k=[\\"||  / \\",\\"|| /  \\",y]
J.l=[v,v,s]
J.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
J.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
J.o=[x,t,w]
J.p=[x,w,\\"||    \\"]
J.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
J.r=[x,y,t]
J.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
J.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
J.u=[t,t,w]
J.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
J.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
J.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
J.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
J.z=[\\"¯// \\",\\"//  \\",s]
J[\\"0\\"]=[x,\\"||x|| \\",w]
J[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
J[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
J[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
J[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
J[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
J[\\"6\\"]=[\\"||¯¯  \\",x,w]
J[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
J[\\"8\\"]=[x,\\"||-|| \\",w]
J[\\"9\\"]=[x,\\"  ¯|| \\",\\"  //  \\"]
J[\\" \\"]=[z,z,z]
I.MAP=J
I.gen=function(str,m)
b=[[],[],[]]
n=self.MAP
for char in str
char=char.lower
if n.hasIndex(char) then
b[0].push(n[char][0])
b[1].push(n[char][1])
b[2].push(n[char][2])
end if
end for
if (typeof(m) == \\"string\\") then
b[0]=(([((_A + m) + AC)] + b[0]) + [AB])
b[1]=(([((_A + m) + AC)] + b[1]) + [AB])
b[2]=(([((_A + m) + AC)] + b[2]) + [AB])
else if (typeof(m) == \\"list\\") then
b[0]=(([((_A + m[0]) + AC)] + b[0]) + [AB])
b[1]=(([((_A + m[1]) + AC)] + b[1]) + [AB])
b[2]=(([((_A + m[2]) + AC)] + b[2]) + [AB])
end if
return [b[0].join(\\"\\"),b[1].join(\\"\\"),b[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(I.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts binary-expressions.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
a=(a / b)
a=(a * b)
a=(a - b)
a=(a + b)
(bitwise(\\"<<\\",a,b))
(bitwise(\\">>\\",a,b))
w=(bitwise(\\">>\\",(bitwise(\\">>>\\",a,(bitwise(\\"<<\\",b,c)))),a))
(bitwise(\\"|\\",a,b))
(bitwise(\\"&\\",a,b))
(bitwise(\\"^\\",a,b))
(a and b)
(a or b)",
]
`;

exports[`parse default scripts binary-expressions.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

a = (a / b)
a = (a * b)
a = (a - b)
a = (a + b)
(bitwise(\\"<<\\", a, b))
(bitwise(\\">>\\", a, b))
w = (bitwise(\\">>\\", (bitwise(\\">>>\\", a, (bitwise(\\"<<\\", b, c)))), a))
(bitwise(\\"|\\", a, b))
(bitwise(\\"&\\", a, b))
(bitwise(\\"^\\", a, b))
(a and b)
(a or b)",
]
`;

exports[`parse default scripts binary-expressions.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I=(I / J)
I=(I * J)
I=(I - J)
I=(I + J)
(bitwise(\\"<<\\",I,J))
(bitwise(\\">>\\",I,J))
K=(bitwise(\\">>\\",(bitwise(\\">>>\\",I,(bitwise(\\"<<\\",J,L)))),I))
(bitwise(\\"|\\",I,J))
(bitwise(\\"&\\",I,J))
(bitwise(\\"^\\",I,J))
(I and J)
(I or J)",
]
`;

exports[`parse default scripts default-args.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
test=function(arg1=0,arg2=\\"test\\")
print(arg1)
print(arg2)
end function
test()
test(\\"foo\\",false)",
]
`;

exports[`parse default scripts default-args.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

test = function(arg1 = 0, arg2 = \\"test\\")
	print(arg1)
	print(arg2)
end function

test()
test(\\"foo\\", false)",
]
`;

exports[`parse default scripts default-args.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I=function(J=0,K=\\"test\\")
print(J)
print(K)
end function
I
I(\\"foo\\",false)",
]
`;

exports[`parse default scripts envar.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
myvar2=\\"\\"foo\\"\\"
myvar=\\"\\"foo\\"\\"
print(\\"0.2\\")",
]
`;

exports[`parse default scripts envar.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

myvar2 = \\"\\"foo\\"\\"
myvar = \\"\\"foo\\"\\"
print(\\"0.2\\")",
]
`;

exports[`parse default scripts envar.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
J=\\"\\"foo\\"\\"
I=\\"\\"foo\\"\\"
print(\\"0.2\\")",
]
`;

exports[`parse default scripts greybel-utils.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
MODULES[\\"B\\"]=function(r)
module={}
if EXPORTED.hasIndex(r) then
module=EXPORTED[r]
end if
if not module.hasIndex(\\"exports\\") then
AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if signs.hasIndex(char) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors) == \\"string\\") then
r[0]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
else if (typeof(colors) == \\"list\\") then
r[0]=(([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))
end if
EXPORTED[r]=module
return EXPORTED[r]
end function
foo = __REQUIRE(\\"B\\")
AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if signs.hasIndex(char) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors) == \\"string\\") then
r[0]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
else if (typeof(colors) == \\"list\\") then
r[0]=(([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))
\\"true\\"
//debugger",
]
`;

exports[`parse default scripts greybel-utils.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

MODULES[\\"B\\"] = function(r)
	module = {}

	if EXPORTED.hasIndex(r) then
		module = EXPORTED[r]
	end if

	if not module.hasIndex(\\"exports\\") then
		AsciiGen = {}
map = {}
map.a = [\\"||¯|| \\", \\"||_|| \\", \\"|| || \\"]
map.b = [\\"||¯/ \\", \\"|| \\\\ \\", \\"||_/ \\"]
map.c = [\\"||¯ \\", \\"||  \\", \\"||_ \\"]
map.d = [\\"||¯\\\\\\\\ \\", \\"|| // \\", \\"||//  \\"]
map.e = [\\"||¯ \\", \\"||- \\", \\"||_ \\"]
map.f = [\\"||¯ \\", \\"||_ \\", \\"||  \\"]
map.g = [\\"||¯¯  \\", \\"|| \\\\\\\\ \\", \\"||_|| \\"]
map.h = [\\"|| || \\", \\"||-|| \\", \\"|| || \\"]
map.i = [\\"|| \\", \\"|| \\", \\"|| \\"]
map.j = [\\" ¯||¯ \\", \\"  ||  \\", \\"|_||  \\"]
map.k = [\\"||  / \\", \\"|| /  \\", \\"||¯\\\\\\\\ \\"]
map.l = [\\"||  \\", \\"||  \\", \\"||_ \\"]
map.m = [\\"||\\\\\\\\/|| \\", \\"||   || \\", \\"||   || \\"]
map.n = [\\"||\\\\\\\\ || \\", \\"|| \\\\\\\\|| \\", \\"||  \\\\|| \\"]
map.o = [\\"||¯|| \\", \\"|| || \\", \\"||_|| \\"]
map.p = [\\"||¯|| \\", \\"||_|| \\", \\"||    \\"]
map.q = [\\"||¯||  \\", \\"|| ||  \\", \\"||_||¬ \\"]
map.r = [\\"||¯|| \\", \\"||¯\\\\\\\\ \\", \\"|| || \\"]
map.s = [\\"||¯¯ \\", \\" \\\\\\\\  \\", \\"__|| \\"]
map.t = [\\"¯||¯ \\", \\" ||  \\", \\" ||  \\"]
map.u = [\\"|| || \\", \\"|| || \\", \\"||_|| \\"]
map.v = [\\"\\\\\\\\ || \\", \\" \\\\\\\\|| \\", \\"  \\\\\\\\| \\"]
map.w = [\\"\\\\\\\\ |\\\\\\\\ | \\", \\" \\\\\\\\| \\\\\\\\| \\", \\"  \\\\\\\\  \\\\\\\\ \\"]
map.x = [\\"\\\\\\\\  / \\", \\" \\\\\\\\/  \\", \\" //\\\\  \\"]
map.y = [\\"\\\\\\\\  // \\", \\" \\\\\\\\//  \\", \\"  ||   \\"]
map.z = [\\"¯// \\", \\"//  \\", \\"||_ \\"]
map[\\"0\\"] = [\\"||¯|| \\", \\"||x|| \\", \\"||_|| \\"]
map[\\"1\\"] = [\\"'|| \\", \\" || \\", \\" || \\"]
map[\\"2\\"] = [\\"¯¯|| \\", \\"||¯  \\", \\"||_  \\"]
map[\\"3\\"] = [\\"¯|| \\", \\"-|| \\", \\"_|| \\"]
map[\\"4\\"] = [\\" /|| \\", \\"/_|| \\", \\"  || \\"]
map[\\"5\\"] = [\\"||¯¯ \\", \\" ¯|| \\", \\" _|| \\"]
map[\\"6\\"] = [\\"||¯¯  \\", \\"||¯|| \\", \\"||_|| \\"]
map[\\"7\\"] = [\\"¯¯// \\", \\" //  \\", \\"//   \\"]
map[\\"8\\"] = [\\"||¯|| \\", \\"||-|| \\", \\"||_|| \\"]
map[\\"9\\"] = [\\"||¯|| \\", \\"  ¯|| \\", \\"  //  \\"]
map[\\" \\"] = [\\"  \\", \\"  \\", \\"  \\"]
AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [[], [], []]
	signs = self.MAP

	for char in str
		char = char.lower

		if signs.hasIndex(char) then
			r[0].push(signs[char][0])
			r[1].push(signs[char][1])
			r[2].push(signs[char][2])
		end if
	end for

	if (typeof(colors) == \\"string\\") then
		r[0] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
	else if (typeof(colors) == \\"list\\") then
		r[0] = (([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
	end if

	return [r[0].join(\\"\\"), r[1].join(\\"\\"), r[2].join(\\"\\")].join(\\"\\\\n\\")
end function

print(AsciiGen.gen(\\"Hallo\\"))
	end if

	EXPORTED[r] = module
	return EXPORTED[r]
end function

foo = __REQUIRE(\\"B\\")
AsciiGen = {}
map = {}
map.a = [\\"||¯|| \\", \\"||_|| \\", \\"|| || \\"]
map.b = [\\"||¯/ \\", \\"|| \\\\ \\", \\"||_/ \\"]
map.c = [\\"||¯ \\", \\"||  \\", \\"||_ \\"]
map.d = [\\"||¯\\\\\\\\ \\", \\"|| // \\", \\"||//  \\"]
map.e = [\\"||¯ \\", \\"||- \\", \\"||_ \\"]
map.f = [\\"||¯ \\", \\"||_ \\", \\"||  \\"]
map.g = [\\"||¯¯  \\", \\"|| \\\\\\\\ \\", \\"||_|| \\"]
map.h = [\\"|| || \\", \\"||-|| \\", \\"|| || \\"]
map.i = [\\"|| \\", \\"|| \\", \\"|| \\"]
map.j = [\\" ¯||¯ \\", \\"  ||  \\", \\"|_||  \\"]
map.k = [\\"||  / \\", \\"|| /  \\", \\"||¯\\\\\\\\ \\"]
map.l = [\\"||  \\", \\"||  \\", \\"||_ \\"]
map.m = [\\"||\\\\\\\\/|| \\", \\"||   || \\", \\"||   || \\"]
map.n = [\\"||\\\\\\\\ || \\", \\"|| \\\\\\\\|| \\", \\"||  \\\\|| \\"]
map.o = [\\"||¯|| \\", \\"|| || \\", \\"||_|| \\"]
map.p = [\\"||¯|| \\", \\"||_|| \\", \\"||    \\"]
map.q = [\\"||¯||  \\", \\"|| ||  \\", \\"||_||¬ \\"]
map.r = [\\"||¯|| \\", \\"||¯\\\\\\\\ \\", \\"|| || \\"]
map.s = [\\"||¯¯ \\", \\" \\\\\\\\  \\", \\"__|| \\"]
map.t = [\\"¯||¯ \\", \\" ||  \\", \\" ||  \\"]
map.u = [\\"|| || \\", \\"|| || \\", \\"||_|| \\"]
map.v = [\\"\\\\\\\\ || \\", \\" \\\\\\\\|| \\", \\"  \\\\\\\\| \\"]
map.w = [\\"\\\\\\\\ |\\\\\\\\ | \\", \\" \\\\\\\\| \\\\\\\\| \\", \\"  \\\\\\\\  \\\\\\\\ \\"]
map.x = [\\"\\\\\\\\  / \\", \\" \\\\\\\\/  \\", \\" //\\\\  \\"]
map.y = [\\"\\\\\\\\  // \\", \\" \\\\\\\\//  \\", \\"  ||   \\"]
map.z = [\\"¯// \\", \\"//  \\", \\"||_ \\"]
map[\\"0\\"] = [\\"||¯|| \\", \\"||x|| \\", \\"||_|| \\"]
map[\\"1\\"] = [\\"'|| \\", \\" || \\", \\" || \\"]
map[\\"2\\"] = [\\"¯¯|| \\", \\"||¯  \\", \\"||_  \\"]
map[\\"3\\"] = [\\"¯|| \\", \\"-|| \\", \\"_|| \\"]
map[\\"4\\"] = [\\" /|| \\", \\"/_|| \\", \\"  || \\"]
map[\\"5\\"] = [\\"||¯¯ \\", \\" ¯|| \\", \\" _|| \\"]
map[\\"6\\"] = [\\"||¯¯  \\", \\"||¯|| \\", \\"||_|| \\"]
map[\\"7\\"] = [\\"¯¯// \\", \\" //  \\", \\"//   \\"]
map[\\"8\\"] = [\\"||¯|| \\", \\"||-|| \\", \\"||_|| \\"]
map[\\"9\\"] = [\\"||¯|| \\", \\"  ¯|| \\", \\"  //  \\"]
map[\\" \\"] = [\\"  \\", \\"  \\", \\"  \\"]
AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [[], [], []]
	signs = self.MAP

	for char in str
		char = char.lower

		if signs.hasIndex(char) then
			r[0].push(signs[char][0])
			r[1].push(signs[char][1])
			r[2].push(signs[char][2])
		end if
	end for

	if (typeof(colors) == \\"string\\") then
		r[0] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
	else if (typeof(colors) == \\"list\\") then
		r[0] = (([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
	end if

	return [r[0].join(\\"\\"), r[1].join(\\"\\"), r[2].join(\\"\\")].join(\\"\\\\n\\")
end function

print(AsciiGen.gen(\\"Hallo\\"))
\\"true\\"
//debugger",
]
`;

exports[`parse default scripts greybel-utils.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(c)
if not C.hasIndex(c) then
exit(((\\"Module \\" + c) + \\" cannot be found...\\"))
end if
G=C[c]
return @G(c).exports
end function
C[\\"B\\"]=function(c)
G={}
if D.hasIndex(c) then
G=D[c]
end if
if not G.hasIndex(\\"exports\\") then
J={}
K={}
K.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
K.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
K.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
K.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
K.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
K.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
K.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
K.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
K.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
K.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
K.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
K.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
K.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
K.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
K.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
K.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
K.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
K.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
K.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
K.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
K.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
K.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
K.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
K.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
K.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
K.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
K[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
K[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
K[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
K[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
K[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
K[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
K[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
K[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
K[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
K[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
K[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
J.MAP=K
J.gen=function(str,n)
c=[[],[],[]]
o=self.MAP
for char in str
char=char.lower
if o.hasIndex(char) then
c[0].push(o[char][0])
c[1].push(o[char][1])
c[2].push(o[char][2])
end if
end for
if (typeof(n) == \\"string\\") then
c[0]=(([((\\"<color=#\\" + n) + \\">\\")] + c[0]) + [\\"</color>\\"])
c[1]=(([((\\"<color=#\\" + n) + \\">\\")] + c[1]) + [\\"</color>\\"])
c[2]=(([((\\"<color=#\\" + n) + \\">\\")] + c[2]) + [\\"</color>\\"])
else if (typeof(n) == \\"list\\") then
c[0]=(([((\\"<color=#\\" + n[0]) + \\">\\")] + c[0]) + [\\"</color>\\"])
c[1]=(([((\\"<color=#\\" + n[1]) + \\">\\")] + c[1]) + [\\"</color>\\"])
c[2]=(([((\\"<color=#\\" + n[2]) + \\">\\")] + c[2]) + [\\"</color>\\"])
end if
return [c[0].join(\\"\\"),c[1].join(\\"\\"),c[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(J.gen(\\"Hallo\\"))
end if
D[c]=G
return D[c]
end function
I=E(\\"B\\")
J={}
K={}
K.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
K.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
K.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
K.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
K.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
K.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
K.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
K.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
K.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
K.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
K.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
K.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
K.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
K.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
K.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
K.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
K.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
K.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
K.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
K.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
K.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
K.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
K.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
K.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
K.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
K.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
K[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
K[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
K[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
K[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
K[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
K[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
K[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
K[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
K[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
K[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
K[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
J.MAP=K
J.gen=function(str,n)
c=[[],[],[]]
o=self.MAP
for char in str
char=char.lower
if o.hasIndex(char) then
c[0].push(o[char][0])
c[1].push(o[char][1])
c[2].push(o[char][2])
end if
end for
if (typeof(n) == \\"string\\") then
c[0]=(([((\\"<color=#\\" + n) + \\">\\")] + c[0]) + [\\"</color>\\"])
c[1]=(([((\\"<color=#\\" + n) + \\">\\")] + c[1]) + [\\"</color>\\"])
c[2]=(([((\\"<color=#\\" + n) + \\">\\")] + c[2]) + [\\"</color>\\"])
else if (typeof(n) == \\"list\\") then
c[0]=(([((\\"<color=#\\" + n[0]) + \\">\\")] + c[0]) + [\\"</color>\\"])
c[1]=(([((\\"<color=#\\" + n[1]) + \\">\\")] + c[1]) + [\\"</color>\\"])
c[2]=(([((\\"<color=#\\" + n[2]) + \\">\\")] + c[2]) + [\\"</color>\\"])
end if
return [c[0].join(\\"\\"),c[1].join(\\"\\"),c[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(J.gen(\\"Hallo\\"))
\\"true\\"
//debugger",
]
`;

exports[`parse default scripts has-index.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
globals.test=\\"was\\"
locals.foo=\\"moo\\"
print(globals.hasIndex(\\"test\\"))
print(locals.hasIndex(\\"foo\\"))",
]
`;

exports[`parse default scripts has-index.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

globals.test = \\"was\\"
locals.foo = \\"moo\\"
print(globals.hasIndex(\\"test\\"))
print(locals.hasIndex(\\"foo\\"))",
]
`;

exports[`parse default scripts has-index.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
H.I=\\"was\\"
locals.J=\\"moo\\"
print(H.hasIndex(\\"I\\"))
print(locals.hasIndex(\\"J\\"))",
]
`;

exports[`parse default scripts if-scuffed.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
if true then
print(\\"true - 1\\")
end if
if true then
print(\\"true - 2\\")
else if true then
print(\\"true - 2\\")
end if
if true then
print(\\"true - 3\\")
else if true then
print(\\"true - 3\\")
else if true then
print(\\"true - 3\\")
end if
if true then
print(\\"true - 4\\")
else if true then
print(\\"true - 4\\")
else if true then
print(\\"true - 4\\")
else
print(\\"true - 4\\")
end if
if true then
print(\\"true - 5\\")
else if true then
print(\\"true - 5\\")
else
print(\\"true - 5\\")
end if
if true then
print(\\"true - 6\\")
else
print(\\"true - 6\\")
end if",
]
`;

exports[`parse default scripts if-scuffed.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function


if true then
	print(\\"true - 1\\")
end if

if true then
	print(\\"true - 2\\")
else if true then
	print(\\"true - 2\\")
end if

if true then
	print(\\"true - 3\\")
else if true then
	print(\\"true - 3\\")
else if true then
	print(\\"true - 3\\")
end if

if true then
	print(\\"true - 4\\")
else if true then
	print(\\"true - 4\\")
else if true then
	print(\\"true - 4\\")
else
	print(\\"true - 4\\")
end if

if true then
	print(\\"true - 5\\")
else if true then
	print(\\"true - 5\\")
else
	print(\\"true - 5\\")
end if

if true then
	print(\\"true - 6\\")
else
	print(\\"true - 6\\")
end if",
]
`;

exports[`parse default scripts if-scuffed.src uglify 1`] = `
Array [
  "globals.H=globals
H.I=true
H.J=\\"true - 3\\"
H.K=\\"true - 4\\"
H.L=\\"true - 5\\"
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
if I then
print(\\"true - 1\\")
end if
if I then
print(\\"true - 2\\")
else if I then
print(\\"true - 2\\")
end if
if I then
print(J)
else if I then
print(J)
else if I then
print(J)
end if
if I then
print(K)
else if I then
print(K)
else if I then
print(K)
else
print(K)
end if
if I then
print(L)
else if I then
print(L)
else
print(L)
end if
if I then
print(\\"true - 6\\")
else
print(\\"true - 6\\")
end if",
]
`;

exports[`parse default scripts import-code.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
import_code(\\"/some/path\\")
print(123)",
  "AsciiGen={}
map={}
map.a=[\\"||¯|| \\",\\"||_|| \\",\\"|| || \\"]
map.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
map.c=[\\"||¯ \\",\\"||  \\",\\"||_ \\"]
map.d=[\\"||¯\\\\\\\\ \\",\\"|| // \\",\\"||//  \\"]
map.e=[\\"||¯ \\",\\"||- \\",\\"||_ \\"]
map.f=[\\"||¯ \\",\\"||_ \\",\\"||  \\"]
map.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",\\"||_|| \\"]
map.h=[\\"|| || \\",\\"||-|| \\",\\"|| || \\"]
map.i=[\\"|| \\",\\"|| \\",\\"|| \\"]
map.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
map.k=[\\"||  / \\",\\"|| /  \\",\\"||¯\\\\\\\\ \\"]
map.l=[\\"||  \\",\\"||  \\",\\"||_ \\"]
map.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
map.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
map.o=[\\"||¯|| \\",\\"|| || \\",\\"||_|| \\"]
map.p=[\\"||¯|| \\",\\"||_|| \\",\\"||    \\"]
map.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
map.r=[\\"||¯|| \\",\\"||¯\\\\\\\\ \\",\\"|| || \\"]
map.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
map.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
map.u=[\\"|| || \\",\\"|| || \\",\\"||_|| \\"]
map.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
map.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
map.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
map.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
map.z=[\\"¯// \\",\\"//  \\",\\"||_ \\"]
map[\\"0\\"]=[\\"||¯|| \\",\\"||x|| \\",\\"||_|| \\"]
map[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
map[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
map[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
map[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
map[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
map[\\"6\\"]=[\\"||¯¯  \\",\\"||¯|| \\",\\"||_|| \\"]
map[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
map[\\"8\\"]=[\\"||¯|| \\",\\"||-|| \\",\\"||_|| \\"]
map[\\"9\\"]=[\\"||¯|| \\",\\"  ¯|| \\",\\"  //  \\"]
map[\\" \\"]=[\\"  \\",\\"  \\",\\"  \\"]
AsciiGen.MAP=map
AsciiGen.gen=function(str,colors)
r=[[],[],[]]
signs=self.MAP
for char in str
char=char.lower
if signs.hasIndex(char) then
r[0].push(signs[char][0])
r[1].push(signs[char][1])
r[2].push(signs[char][2])
end if
end for
if (typeof(colors) == \\"string\\") then
r[0]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
else if (typeof(colors) == \\"list\\") then
r[0]=(([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
r[1]=(([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
r[2]=(([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
end if
return [r[0].join(\\"\\"),r[1].join(\\"\\"),r[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(AsciiGen.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts import-code.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

import_code(\\"/some/path\\")
print(123)",
  "AsciiGen = {}
map = {}
map.a = [\\"||¯|| \\", \\"||_|| \\", \\"|| || \\"]
map.b = [\\"||¯/ \\", \\"|| \\\\ \\", \\"||_/ \\"]
map.c = [\\"||¯ \\", \\"||  \\", \\"||_ \\"]
map.d = [\\"||¯\\\\\\\\ \\", \\"|| // \\", \\"||//  \\"]
map.e = [\\"||¯ \\", \\"||- \\", \\"||_ \\"]
map.f = [\\"||¯ \\", \\"||_ \\", \\"||  \\"]
map.g = [\\"||¯¯  \\", \\"|| \\\\\\\\ \\", \\"||_|| \\"]
map.h = [\\"|| || \\", \\"||-|| \\", \\"|| || \\"]
map.i = [\\"|| \\", \\"|| \\", \\"|| \\"]
map.j = [\\" ¯||¯ \\", \\"  ||  \\", \\"|_||  \\"]
map.k = [\\"||  / \\", \\"|| /  \\", \\"||¯\\\\\\\\ \\"]
map.l = [\\"||  \\", \\"||  \\", \\"||_ \\"]
map.m = [\\"||\\\\\\\\/|| \\", \\"||   || \\", \\"||   || \\"]
map.n = [\\"||\\\\\\\\ || \\", \\"|| \\\\\\\\|| \\", \\"||  \\\\|| \\"]
map.o = [\\"||¯|| \\", \\"|| || \\", \\"||_|| \\"]
map.p = [\\"||¯|| \\", \\"||_|| \\", \\"||    \\"]
map.q = [\\"||¯||  \\", \\"|| ||  \\", \\"||_||¬ \\"]
map.r = [\\"||¯|| \\", \\"||¯\\\\\\\\ \\", \\"|| || \\"]
map.s = [\\"||¯¯ \\", \\" \\\\\\\\  \\", \\"__|| \\"]
map.t = [\\"¯||¯ \\", \\" ||  \\", \\" ||  \\"]
map.u = [\\"|| || \\", \\"|| || \\", \\"||_|| \\"]
map.v = [\\"\\\\\\\\ || \\", \\" \\\\\\\\|| \\", \\"  \\\\\\\\| \\"]
map.w = [\\"\\\\\\\\ |\\\\\\\\ | \\", \\" \\\\\\\\| \\\\\\\\| \\", \\"  \\\\\\\\  \\\\\\\\ \\"]
map.x = [\\"\\\\\\\\  / \\", \\" \\\\\\\\/  \\", \\" //\\\\  \\"]
map.y = [\\"\\\\\\\\  // \\", \\" \\\\\\\\//  \\", \\"  ||   \\"]
map.z = [\\"¯// \\", \\"//  \\", \\"||_ \\"]
map[\\"0\\"] = [\\"||¯|| \\", \\"||x|| \\", \\"||_|| \\"]
map[\\"1\\"] = [\\"'|| \\", \\" || \\", \\" || \\"]
map[\\"2\\"] = [\\"¯¯|| \\", \\"||¯  \\", \\"||_  \\"]
map[\\"3\\"] = [\\"¯|| \\", \\"-|| \\", \\"_|| \\"]
map[\\"4\\"] = [\\" /|| \\", \\"/_|| \\", \\"  || \\"]
map[\\"5\\"] = [\\"||¯¯ \\", \\" ¯|| \\", \\" _|| \\"]
map[\\"6\\"] = [\\"||¯¯  \\", \\"||¯|| \\", \\"||_|| \\"]
map[\\"7\\"] = [\\"¯¯// \\", \\" //  \\", \\"//   \\"]
map[\\"8\\"] = [\\"||¯|| \\", \\"||-|| \\", \\"||_|| \\"]
map[\\"9\\"] = [\\"||¯|| \\", \\"  ¯|| \\", \\"  //  \\"]
map[\\" \\"] = [\\"  \\", \\"  \\", \\"  \\"]
AsciiGen.MAP = map

AsciiGen.gen = function(str, colors)
	r = [[], [], []]
	signs = self.MAP

	for char in str
		char = char.lower

		if signs.hasIndex(char) then
			r[0].push(signs[char][0])
			r[1].push(signs[char][1])
			r[2].push(signs[char][2])
		end if
	end for

	if (typeof(colors) == \\"string\\") then
		r[0] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors) + \\">\\")] + r[2]) + [\\"</color>\\"])
	else if (typeof(colors) == \\"list\\") then
		r[0] = (([((\\"<color=#\\" + colors[0]) + \\">\\")] + r[0]) + [\\"</color>\\"])
		r[1] = (([((\\"<color=#\\" + colors[1]) + \\">\\")] + r[1]) + [\\"</color>\\"])
		r[2] = (([((\\"<color=#\\" + colors[2]) + \\">\\")] + r[2]) + [\\"</color>\\"])
	end if

	return [r[0].join(\\"\\"), r[1].join(\\"\\"), r[2].join(\\"\\")].join(\\"\\\\n\\")
end function

print(AsciiGen.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts import-code.src uglify 1`] = `
Array [
  "globals.H=globals
H.x=\\"||¯|| \\"
H.w=\\"||_|| \\"
H.t=\\"|| || \\"
H.r=\\"||¯ \\"
H.v=\\"||  \\"
H.s=\\"||_ \\"
H.y=\\"||¯\\\\\\\\ \\"
H.u=\\"|| \\"
H.z=\\"  \\"
H._A=\\"<color=#\\"
H.AC=\\">\\"
H.AB=\\"</color>\\"
C={}
D={}
E=function(b)
if not C.hasIndex(b) then
exit(((\\"Module \\" + b) + \\" cannot be found...\\"))
end if
G=C[b]
return @G(b).exports
end function
import_code(\\"/some/path\\")
print(123)",
  "I={}
J={}
J.a=[x,w,t]
J.b=[\\"||¯/ \\",\\"|| \\\\ \\",\\"||_/ \\"]
J.c=[r,v,s]
J.d=[y,\\"|| // \\",\\"||//  \\"]
J.e=[r,\\"||- \\",s]
J.f=[r,s,v]
J.g=[\\"||¯¯  \\",\\"|| \\\\\\\\ \\",w]
J.h=[t,\\"||-|| \\",t]
J.i=[u,u,u]
J.j=[\\" ¯||¯ \\",\\"  ||  \\",\\"|_||  \\"]
J.k=[\\"||  / \\",\\"|| /  \\",y]
J.l=[v,v,s]
J.m=[\\"||\\\\\\\\/|| \\",\\"||   || \\",\\"||   || \\"]
J.n=[\\"||\\\\\\\\ || \\",\\"|| \\\\\\\\|| \\",\\"||  \\\\|| \\"]
J.o=[x,t,w]
J.p=[x,w,\\"||    \\"]
J.q=[\\"||¯||  \\",\\"|| ||  \\",\\"||_||¬ \\"]
J.r=[x,y,t]
J.s=[\\"||¯¯ \\",\\" \\\\\\\\  \\",\\"__|| \\"]
J.t=[\\"¯||¯ \\",\\" ||  \\",\\" ||  \\"]
J.u=[t,t,w]
J.v=[\\"\\\\\\\\ || \\",\\" \\\\\\\\|| \\",\\"  \\\\\\\\| \\"]
J.w=[\\"\\\\\\\\ |\\\\\\\\ | \\",\\" \\\\\\\\| \\\\\\\\| \\",\\"  \\\\\\\\  \\\\\\\\ \\"]
J.x=[\\"\\\\\\\\  / \\",\\" \\\\\\\\/  \\",\\" //\\\\  \\"]
J.y=[\\"\\\\\\\\  // \\",\\" \\\\\\\\//  \\",\\"  ||   \\"]
J.z=[\\"¯// \\",\\"//  \\",s]
J[\\"0\\"]=[x,\\"||x|| \\",w]
J[\\"1\\"]=[\\"'|| \\",\\" || \\",\\" || \\"]
J[\\"2\\"]=[\\"¯¯|| \\",\\"||¯  \\",\\"||_  \\"]
J[\\"3\\"]=[\\"¯|| \\",\\"-|| \\",\\"_|| \\"]
J[\\"4\\"]=[\\" /|| \\",\\"/_|| \\",\\"  || \\"]
J[\\"5\\"]=[\\"||¯¯ \\",\\" ¯|| \\",\\" _|| \\"]
J[\\"6\\"]=[\\"||¯¯  \\",x,w]
J[\\"7\\"]=[\\"¯¯// \\",\\" //  \\",\\"//   \\"]
J[\\"8\\"]=[x,\\"||-|| \\",w]
J[\\"9\\"]=[x,\\"  ¯|| \\",\\"  //  \\"]
J[\\" \\"]=[z,z,z]
I.MAP=J
I.gen=function(str,m)
b=[[],[],[]]
n=self.MAP
for char in str
char=char.lower
if n.hasIndex(char) then
b[0].push(n[char][0])
b[1].push(n[char][1])
b[2].push(n[char][2])
end if
end for
if (typeof(m) == \\"string\\") then
b[0]=(([((_A + m) + AC)] + b[0]) + [AB])
b[1]=(([((_A + m) + AC)] + b[1]) + [AB])
b[2]=(([((_A + m) + AC)] + b[2]) + [AB])
else if (typeof(m) == \\"list\\") then
b[0]=(([((_A + m[0]) + AC)] + b[0]) + [AB])
b[1]=(([((_A + m[1]) + AC)] + b[1]) + [AB])
b[2]=(([((_A + m[2]) + AC)] + b[2]) + [AB])
end if
return [b[0].join(\\"\\"),b[1].join(\\"\\"),b[2].join(\\"\\")].join(\\"\\\\n\\")
end function
print(I.gen(\\"Hallo\\"))",
]
`;

exports[`parse default scripts map.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
test={{\\"myTest\\":0,1:2}:true}
test2={[12,14]:true}
test3={test:234}
test4={true:\\"foo\\"}
test5={123:\\"bar\\"}",
]
`;

exports[`parse default scripts map.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

test = {{\\"myTest\\": 0, 1: 2}: true}
test2 = {[12, 14]: true}
test3 = {test: 234}
test4 = {true: \\"foo\\"}
test5 = {123: \\"bar\\"}",
]
`;

exports[`parse default scripts map.src uglify 1`] = `
Array [
  "globals.H=globals
H.N=true
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I={{\\"myTest\\":0,1:2}:N}
J={[12,14]:N}
K={I:234}
L={N:\\"foo\\"}
M={123:\\"bar\\"}",
]
`;

exports[`parse default scripts negation.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
test=(((-1 + 2) + -2) + +3)
foo=[-1,(-2 + 4),((-2 + -4) + +6)]
print(test)
print(foo)",
]
`;

exports[`parse default scripts negation.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

test = (((-1 + 2) + -2) + +3)
foo = [-1, (-2 + 4), ((-2 + -4) + +6)]
print(test)
print(foo)",
]
`;

exports[`parse default scripts negation.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I=(((-1 + 2) + -2) + +3)
J=[-1,(-2 + 4),((-2 + -4) + +6)]
print(I)
print(J)",
]
`;

exports[`parse default scripts obj-init.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
valueOfIdentifier=\\"foo\\"
myObject={\\"test\\":{\\"another\\":\\"123\\"},\\"value\\":\\"123\\",\\"idtf\\":valueOfIdentifier}
print([myObject.test.another,myObject.value,myObject.idtf])
myList=[{\\"another\\":\\"123\\"},\\"123\\",valueOfIdentifier]
print(myList)",
]
`;

exports[`parse default scripts obj-init.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

valueOfIdentifier = \\"foo\\"

myObject = {\\"test\\": {\\"another\\": \\"123\\"}, \\"value\\": \\"123\\", \\"idtf\\": valueOfIdentifier}

print([myObject.test.another, myObject.value, myObject.idtf])

myList = [{\\"another\\": \\"123\\"}, \\"123\\", valueOfIdentifier]

print(myList)",
]
`;

exports[`parse default scripts obj-init.src uglify 1`] = `
Array [
  "globals.H=globals
H.P=\\"123\\"
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I=\\"foo\\"
J={\\"test\\":{\\"another\\":P},\\"value\\":P,\\"idtf\\":I}
print([J.test.another,J.value,J.idtf])
O=[{\\"another\\":P},P,I]
print(O)",
]
`;

exports[`parse default scripts optimize.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
test=function(abc)
print(abc)
end function
superlangername=function(abc)
print(abc)
end function
superlangername3=function(abc)
print(abc)
end function
superlangername4=function(abc)
print(abc)
end function
superlangername5=function(abc)
print(abc)
end function
test(\\"xxxxxxxxxx\\")
superlangername(\\"xxxxxxxxxx\\")
superlangername4(\\"xxxxxxxxxx\\")
superlangername(\\"xxxxxxxxxx\\")
superlangername5(\\"xxxxxxxxxx\\")
superlangername3(\\"xxxxxxxxxx\\")",
]
`;

exports[`parse default scripts optimize.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

test = function(abc)
	print(abc)
end function

superlangername = function(abc)
	print(abc)
end function

superlangername3 = function(abc)
	print(abc)
end function

superlangername4 = function(abc)
	print(abc)
end function

superlangername5 = function(abc)
	print(abc)
end function

test(\\"xxxxxxxxxx\\")
superlangername(\\"xxxxxxxxxx\\")
superlangername4(\\"xxxxxxxxxx\\")
superlangername(\\"xxxxxxxxxx\\")
superlangername5(\\"xxxxxxxxxx\\")
superlangername3(\\"xxxxxxxxxx\\")",
]
`;

exports[`parse default scripts optimize.src uglify 1`] = `
Array [
  "globals.H=globals
H.O=\\"xxxxxxxxxx\\"
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I=function(N)
print(N)
end function
J=function(N)
print(N)
end function
K=function(N)
print(N)
end function
L=function(N)
print(N)
end function
M=function(N)
print(N)
end function
I(O)
J(O)
L(O)
J(O)
M(O)
K(O)",
]
`;

exports[`parse default scripts password-generator.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
PasswordGenerator={}
PasswordGenerator.MAX_PASSWORD_LENGTH=15
PasswordGenerator.ALPHABETIC_CHARACTERS=\\"qwertzuiopasdfghjklyxcvbnm\\"
PasswordGenerator.NUMBER_CHARACTERS=\\"0123456789\\"
PasswordGenerator.ALPHA_NUMERIC=((PasswordGenerator.ALPHABETIC_CHARACTERS + PasswordGenerator.ALPHABETIC_CHARACTERS.upper) + PasswordGenerator.NUMBER_CHARACTERS)
PasswordGenerator.constructor=function()
me=self
me.buffer=[0]
me.characters=me.ALPHA_NUMERIC
return me
end function
PasswordGenerator.increaseBuffer=function(i)
me=self
currentCharBuffer=me.buffer
maxBufferSize=me.characters.len
if (i == null) then
i=(currentCharBuffer.len - 1)
end if
p=currentCharBuffer[i]
p=(p + 1)
currentCharBuffer[i]=p
if (p == maxBufferSize) then
currentCharBuffer[i]=0
if (i == 0) then
currentCharBuffer.push(0)
else
me.increaseBuffer((i - 1))
end if
end if
end function
PasswordGenerator.gen=function()
me=self
currentCharBuffer=me.buffer
generatorCharacters=me.characters
password=\\"\\"
index=0
while (index < currentCharBuffer.len)
pointer=currentCharBuffer[index]
password=(password + generatorCharacters[pointer])
if (index == (currentCharBuffer.len - 1)) then
self.increaseBuffer()
end if
index=(index + 1)
end while
if (currentCharBuffer.len > me.MAX_PASSWORD_LENGTH) then
return null
end if
return password
end function
pgen=(new PasswordGenerator).constructor()
index=0
max=10
result=[]
while (index < max)
result.push(pgen.gen())
index=(index + 1)
end while
print(result)",
]
`;

exports[`parse default scripts password-generator.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

PasswordGenerator = {}
PasswordGenerator.MAX_PASSWORD_LENGTH = 15
PasswordGenerator.ALPHABETIC_CHARACTERS = \\"qwertzuiopasdfghjklyxcvbnm\\"
PasswordGenerator.NUMBER_CHARACTERS = \\"0123456789\\"
PasswordGenerator.ALPHA_NUMERIC = ((PasswordGenerator.ALPHABETIC_CHARACTERS + PasswordGenerator.ALPHABETIC_CHARACTERS.upper) + PasswordGenerator.NUMBER_CHARACTERS)

PasswordGenerator.constructor = function()
	me = self
	me.buffer = [0]
	me.characters = me.ALPHA_NUMERIC
	return me
end function

PasswordGenerator.increaseBuffer = function(i)
	me = self
	currentCharBuffer = me.buffer
	maxBufferSize = me.characters.len
	
	if (i == null) then
		i = (currentCharBuffer.len - 1)
	end if
	p = currentCharBuffer[i]
	p = (p + 1)
	currentCharBuffer[i] = p

	if (p == maxBufferSize) then
		currentCharBuffer[i] = 0

		if (i == 0) then
			currentCharBuffer.push(0)
		else
			me.increaseBuffer((i - 1))
		end if
	end if

end function

PasswordGenerator.gen = function()
	me = self
	currentCharBuffer = me.buffer
	generatorCharacters = me.characters
	password = \\"\\"
	index = 0

	while (index < currentCharBuffer.len)
		pointer = currentCharBuffer[index]
		password = (password + generatorCharacters[pointer])
		
		if (index == (currentCharBuffer.len - 1)) then
			self.increaseBuffer()
		end if
		index = (index + 1)
	end while

	if (currentCharBuffer.len > me.MAX_PASSWORD_LENGTH) then
		return null
	end if

	return password
end function

pgen = (new PasswordGenerator).constructor()
index = 0
max = 10
result = []

while (index < max)
	result.push(pgen.gen())
	index = (index + 1)
end while

print(result)",
]
`;

exports[`parse default scripts password-generator.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I={}
I.MAX_PASSWORD_LENGTH=15
I.ALPHABETIC_CHARACTERS=\\"qwertzuiopasdfghjklyxcvbnm\\"
I.NUMBER_CHARACTERS=\\"0123456789\\"
I.ALPHA_NUMERIC=((I.ALPHABETIC_CHARACTERS + I.ALPHABETIC_CHARACTERS.upper) + I.NUMBER_CHARACTERS)
I.constructor=function()
W=self
W.buffer=[0]
W.characters=W.ALPHA_NUMERIC
return W
end function
I.increaseBuffer=function(Z)
W=self
a=W.buffer
b=W.characters.len
if (Z == null) then
Z=(a.len - 1)
end if
d=a[Z]
d=(d + 1)
a[Z]=d
if (d == b) then
a[Z]=0
if (Z == 0) then
a.push(0)
else
W.increaseBuffer((Z - 1))
end if
end if
end function
I.gen=function()
W=self
a=W.buffer
e=W.characters
f=\\"\\"
S=0
while (S < a.len)
g=a[S]
f=(f + e[g])
if (S == (a.len - 1)) then
self.increaseBuffer
end if
S=(S + 1)
end while
if (a.len > W.MAX_PASSWORD_LENGTH) then
return null
end if
return f
end function
R=(new I).constructor
S=0
T=10
U=[]
while (S < T)
U.push(R.gen)
S=(S + 1)
end while
print(U)",
]
`;

exports[`parse default scripts pseudo-crypto.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
String={}
String.constructor=function(str)
self.str=str
return self
end function
String.parse=function(values)
result=self.str
index=0
maxIndex=values.len
while (index < maxIndex)
result=result.replace((\\"$\\" + index),values[index])
index=(index + 1)
end while
return (new self).constructor(result)
end function
String.startsWith=function(str)
return (self.str.indexOf(str) == 0)
end function
String.substr=function(startIndex,endIndex)
return (new self).constructor(slice(self.str,startIndex,endIndex))
end function
String.indexOf=function(str)
return self.str.indexOf(str)
end function
String.replace=function(str,newStr)
return (new self).constructor(self.str.replace(str,newStr))
end function
String.remove=function(str)
return (new self).constructor(self.str.remove(str))
end function
String.toString=function()
return self.str
end function
String.length=function()
return self.str.len
end function
String.split=function(seperator)
return self.str.split(seperator)
end function
String.trim=function(seperator)
return (new self).constructor(self.str.trim())
end function
Error={}
Error.String=String
Error.constructor=function(message,values)
m=self
m.message=message
if (values != null) then
m.message=(new m.String).constructor(message).parse(values).toString()
end if
return m
end function
Error.throw=function()
exit(((\\"<color=#ff0000>\\" + self.message) + \\"</color>\\"))
end function
Crypto={}
Crypto.defaultCharset=\\"QWERTZUIOPASDFGHJKLYXCVBNMqwertzuiopasdfghjklyxcvbnm1234567890+-\\"
Crypto.defaultSecret=\\"test123\\"
Crypto.maxCharCode=55295
Crypto.Error=Error
Crypto.constructor=function(defaultSecret,hashFn,charset)
me=self
me.defaultSecret=defaultSecret
me.table=charset
me.hashFn=@hashFn
if (@hashFn == null) then
me.hashFn=@md5
end if
if (charset == null) then
me.table=me.defaultCharset
end if
if (me.table.len != 64) then
(new me.Error).constructor(\\"Invalid charset $0...\\",[me.table]).throw()
end if
return me
end function
Crypto.getHash=function(pw)
me=self
hash=[]
x=me.hashFn(pw)
for char in x
hash.push(char.code)
end for
hash.reverse
return hash
end function
Crypto.encrypt=function(str,pw)
me=self
if (pw == null) then
pw=me.defaultSecret
end if
hash=me.getHash(pw)
hashPointer=0
output=[]
position=0
padding=(str.len % 3)
max=(str.len - padding)
get=function(v)
if not me.table.hasIndex(v) then
(new me.Error).constructor(\\"Invalid index $0...\\",[v]).throw()
end if
return me.table[v]
end function
AND=function(a,b)
return bitwise(\\"&\\",a,b)
end function
LSHIFT=function(a,b)
return bitwise(\\"<<\\",a,b)
end function
RSHIFT=function(a,b)
return bitwise(\\">>\\",a,b)
end function
while (position < max)
m=hash[((position % hash.len) - 1)]
a=LSHIFT((str[position].code + m),16)
b=LSHIFT((str[(position + 1)].code + m),8)
c=(str[(position + 2)].code + m)
buffer=((a + b) + c)
output.push(get(AND(RSHIFT(buffer,18),63)))
output.push(get(AND(RSHIFT(buffer,12),63)))
output.push(get(AND(RSHIFT(buffer,6),63)))
output.push(get(AND(buffer,63)))
position=(position + 3)
end while
if (padding == 2) then
m=hash[((position % hash.len) - 1)]
a=LSHIFT((str[position].code + m),8)
b=(str[(position + 1)].code + m)
buffer=(a + b)
output.push(get(RSHIFT(buffer,10)))
output.push(get(AND(RSHIFT(buffer,4),63)))
output.push(get(AND(LSHIFT(buffer,2),63)))
output.push(\\"=\\")
else if (padding == 1) then
m=hash[((position % hash.len) - 1)]
buffer=(str[position].code + m)
output.push(get(RSHIFT(buffer,2)))
output.push(get(AND(LSHIFT(buffer,4),63)))
output.push(\\"==\\")
end if
return output.join(\\"\\")
end function
Crypto.decrypt=function(str,pw)
me=self
if (pw == null) then
pw=me.defaultSecret
end if
hash=me.getHash(pw)
hashPointer=0
hashLength=hash.len
output=[]
bitCounter=0
bitStorage=0
position=0
hashPointer=0
max=str.len
AND=function(a,b)
return bitwise(\\"&\\",a,b)
end function
RSHIFT=function(a,b)
return bitwise(\\">>\\",a,b)
end function
while (position < max)
buffer=me.table.indexOf(str[position])
currentBit=bitCounter
bitCounter=(bitCounter + 1)
if (currentBit % 4) then
bitStorage=((bitStorage * 64) + buffer)
else
bitStorage=buffer
end if
if (currentBit % 4) then
expectedHashIndex=(((floor((hashPointer / 3)) * 3) % hashLength) - 1)
if not hash.hasIndex(expectedHashIndex) then
break
end if
m=hash[expectedHashIndex]
operation=AND((-2 * bitCounter),6)
operation=RSHIFT(bitStorage,operation)
operation=AND(255,operation)
if (operation != 0) then
charCode=(operation - m)
if (charCode > me.maxCharCode) then
break
end if
output.push(char(charCode))
end if
hashPointer=(hashPointer + 1)
end if
position=(position + 1)
end while
return output.join(\\"\\")
end function
test=(new Crypto).constructor(\\"test\\")
pwd=\\"abcde\\"
foo=test.encrypt(pwd)
decrypted=test.decrypt(foo)
print(foo)
print(decrypted)",
]
`;

exports[`parse default scripts pseudo-crypto.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

String = {}

String.constructor = function(str)
	self.str = str
	return self
end function

String.parse = function(values)
	result = self.str
	index = 0
	maxIndex = values.len

	while (index < maxIndex)
		result = result.replace((\\"$\\" + index), values[index])
		index = (index + 1)
	end while

	return (new self).constructor(result)
end function

String.startsWith = function(str)
	return (self.str.indexOf(str) == 0)
end function

String.substr = function(startIndex, endIndex)
	return (new self).constructor(slice(self.str, startIndex, endIndex))
end function

String.indexOf = function(str)
	return self.str.indexOf(str)
end function

String.replace = function(str, newStr)
	return (new self).constructor(self.str.replace(str, newStr))
end function

String.remove = function(str)
	return (new self).constructor(self.str.remove(str))
end function

String.toString = function()
	return self.str
end function

String.length = function()
	return self.str.len
end function

String.split = function(seperator)
	return self.str.split(seperator)
end function

String.trim = function(seperator)
	return (new self).constructor(self.str.trim())
end function

Error = {}
Error.String = String

Error.constructor = function(message, values)
	m = self
	m.message = message

	if (values != null) then
		m.message = (new m.String).constructor(message).parse(values).toString()
	end if

	return m
end function

Error.throw = function()
	exit(((\\"<color=#ff0000>\\" + self.message) + \\"</color>\\"))
end function

Crypto = {}
Crypto.defaultCharset = \\"QWERTZUIOPASDFGHJKLYXCVBNMqwertzuiopasdfghjklyxcvbnm1234567890+-\\"
Crypto.defaultSecret = \\"test123\\"
Crypto.maxCharCode = 55295
Crypto.Error = Error

Crypto.constructor = function(defaultSecret, hashFn, charset)
	me = self
	me.defaultSecret = defaultSecret
	me.table = charset
	me.hashFn = @hashFn
	
	if (@hashFn == null) then
		me.hashFn = @md5
	end if
	
	if (charset == null) then
		me.table = me.defaultCharset
	end if
	
	if (me.table.len != 64) then
		(new me.Error).constructor(\\"Invalid charset $0...\\", [me.table]).throw()
	end if
	return me
end function

Crypto.getHash = function(pw)
	me = self
	hash = []
	x = me.hashFn(pw)

	for char in x
		hash.push(char.code)
	end for

	hash.reverse
	return hash
end function

Crypto.encrypt = function(str, pw)
	me = self
	
	if (pw == null) then
		pw = me.defaultSecret
	end if
	hash = me.getHash(pw)
	hashPointer = 0
	output = []
	position = 0
	padding = (str.len % 3)
	max = (str.len - padding)

	get = function(v)
		if not me.table.hasIndex(v) then
			(new me.Error).constructor(\\"Invalid index $0...\\", [v]).throw()
		end if
		return me.table[v]
	end function

	AND = function(a, b)
		return bitwise(\\"&\\", a, b)
	end function

	LSHIFT = function(a, b)
		return bitwise(\\"<<\\", a, b)
	end function

	RSHIFT = function(a, b)
		return bitwise(\\">>\\", a, b)
	end function

	while (position < max)
		m = hash[((position % hash.len) - 1)]
		a = LSHIFT((str[position].code + m), 16)
		b = LSHIFT((str[(position + 1)].code + m), 8)
		c = (str[(position + 2)].code + m)
		buffer = ((a + b) + c)
		output.push(get(AND(RSHIFT(buffer, 18), 63)))
		output.push(get(AND(RSHIFT(buffer, 12), 63)))
		output.push(get(AND(RSHIFT(buffer, 6), 63)))
		output.push(get(AND(buffer, 63)))
		position = (position + 3)
	end while

	if (padding == 2) then
		m = hash[((position % hash.len) - 1)]
		a = LSHIFT((str[position].code + m), 8)
		b = (str[(position + 1)].code + m)
		buffer = (a + b)
		output.push(get(RSHIFT(buffer, 10)))
		output.push(get(AND(RSHIFT(buffer, 4), 63)))
		output.push(get(AND(LSHIFT(buffer, 2), 63)))
		output.push(\\"=\\")
	else if (padding == 1) then
		m = hash[((position % hash.len) - 1)]
		buffer = (str[position].code + m)
		output.push(get(RSHIFT(buffer, 2)))
		output.push(get(AND(LSHIFT(buffer, 4), 63)))
		output.push(\\"==\\")
	end if

	return output.join(\\"\\")
end function

Crypto.decrypt = function(str, pw)
	me = self
	
	if (pw == null) then
		pw = me.defaultSecret
	end if
	hash = me.getHash(pw)
	hashPointer = 0
	hashLength = hash.len
	output = []
	bitCounter = 0
	bitStorage = 0
	position = 0
	hashPointer = 0
	max = str.len

	AND = function(a, b)
		return bitwise(\\"&\\", a, b)
	end function

	RSHIFT = function(a, b)
		return bitwise(\\">>\\", a, b)
	end function

	while (position < max)
		buffer = me.table.indexOf(str[position])
		currentBit = bitCounter
		bitCounter = (bitCounter + 1)

		if (currentBit % 4) then
			bitStorage = ((bitStorage * 64) + buffer)
		else
			bitStorage = buffer
		end if

		if (currentBit % 4) then
			expectedHashIndex = (((floor((hashPointer / 3)) * 3) % hashLength) - 1)
			
			if not hash.hasIndex(expectedHashIndex) then
				break
			end if
			m = hash[expectedHashIndex]
			operation = AND((-2 * bitCounter), 6)
			operation = RSHIFT(bitStorage, operation)
			operation = AND(255, operation)

			if (operation != 0) then
				charCode = (operation - m)
				
				if (charCode > me.maxCharCode) then
					break
				end if
				output.push(char(charCode))
			end if

			hashPointer = (hashPointer + 1)
		end if

		position = (position + 1)
	end while

	return output.join(\\"\\")
end function

test = (new Crypto).constructor(\\"test\\")
pwd = \\"abcde\\"
foo = test.encrypt(pwd)
decrypted = test.decrypt(foo)
print(foo)
print(decrypted)",
]
`;

exports[`parse default scripts pseudo-crypto.src uglify 1`] = `
Array [
  "globals.H=globals
H.Ae=1
H.Ac=null
H.Ad=63
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I={}
I.constructor=function(str)
self.str=str
return self
end function
I.parse=function(h)
i=self.str
j=0
k=h.len
while (j < k)
i=i.replace((\\"$\\" + j),h[j])
j=(j + Ae)
end while
return (new self).constructor(i)
end function
I.startsWith=function(str)
return (self.str.indexOf(str) == 0)
end function
I.substr=function(s,n)
return (new self).constructor(slice(self.str,s,n))
end function
I.indexOf=function(str)
return self.str.indexOf(str)
end function
I.replace=function(str,o)
return (new self).constructor(self.str.replace(str,o))
end function
I.remove=function(str)
return (new self).constructor(self.str.remove(str))
end function
I.toString=function()
return self.str
end function
I.length=function()
return self.str.len
end function
I.split=function(p)
return self.str.split(p)
end function
I.trim=function(p)
return (new self).constructor(self.str.trim)
end function
U={}
U.String=I
U.constructor=function(q,h)
r=self
r.message=q
if (h != Ac) then
r.message=(new r.String).constructor(q).parse(h).toString
end if
return r
end function
U.throw=function()
exit(((\\"<color=#ff0000>\\" + self.message) + \\"</color>\\"))
end function
W={}
W.defaultCharset=\\"QWERTZUIOPASDFGHJKLYXCVBNMqwertzuiopasdfghjklyxcvbnm1234567890+-\\"
W.defaultSecret=\\"test123\\"
W.maxCharCode=55295
W.Error=U
W.constructor=function(Y,t,u)
AU=self
AU.defaultSecret=Y
AU.table=u
AU.hashFn=@t
if (@t == Ac) then
AU.hashFn=@md5
end if
if (u == Ac) then
AU.table=AU.defaultCharset
end if
if (AU.table.len != 64) then
(new AU.Error).constructor(\\"Invalid charset $0...\\",[AU.table]).throw
end if
return AU
end function
W.getHash=function(z)
AU=self
hash=[]
y=AU.hashFn(z)
for char in y
hash.push(char.code)
end for
hash.reverse
return hash
end function
W.encrypt=function(str,z)
AU=self
if (z == Ac) then
z=AU.defaultSecret
end if
hash=AU.getHash(z)
AC=0
AD=[]
AE=0
AF=(str.len % 3)
AG=(str.len - AF)
AH=function(AT)
if not AU.table.hasIndex(AT) then
(new AU.Error).constructor(\\"Invalid index $0...\\",[AT]).throw
end if
return AU.table[AT]
end function
AI=function(AL,AN)
return bitwise(\\"&\\",AL,AN)
end function
AJ=function(AL,AN)
return bitwise(\\"<<\\",AL,AN)
end function
AK=function(AL,AN)
return bitwise(\\">>\\",AL,AN)
end function
while (AE < AG)
r=hash[((AE % hash.len) - Ae)]
AL=AJ((str[AE].code + r),16)
AN=AJ((str[(AE + Ae)].code + r),8)
AP=(str[(AE + 2)].code + r)
AR=((AL + AN) + AP)
AD.push(AH(AI(AK(AR,18),Ad)))
AD.push(AH(AI(AK(AR,12),Ad)))
AD.push(AH(AI(AK(AR,6),Ad)))
AD.push(AH(AI(AR,Ad)))
AE=(AE + 3)
end while
if (AF == 2) then
r=hash[((AE % hash.len) - Ae)]
AL=AJ((str[AE].code + r),8)
AN=(str[(AE + Ae)].code + r)
AR=(AL + AN)
AD.push(AH(AK(AR,10)))
AD.push(AH(AI(AK(AR,4),Ad)))
AD.push(AH(AI(AJ(AR,2),Ad)))
AD.push(\\"=\\")
else if (AF == Ae) then
r=hash[((AE % hash.len) - Ae)]
AR=(str[AE].code + r)
AD.push(AH(AK(AR,2)))
AD.push(AH(AI(AJ(AR,4),Ad)))
AD.push(\\"==\\")
end if
return AD.join(\\"\\")
end function
W.decrypt=function(str,z)
AU=self
if (z == Ac) then
z=AU.defaultSecret
end if
hash=AU.getHash(z)
AC=0
AV=hash.len
AD=[]
AW=0
AX=0
AE=0
AC=0
AG=str.len
AI=function(AL,AN)
return bitwise(\\"&\\",AL,AN)
end function
AK=function(AL,AN)
return bitwise(\\">>\\",AL,AN)
end function
while (AE < AG)
AR=AU.table.indexOf(str[AE])
AY=AW
AW=(AW + Ae)
if (AY % 4) then
AX=((AX * 64) + AR)
else
AX=AR
end if
if (AY % 4) then
AZ=(((floor((AC / 3)) * 3) % AV) - Ae)
if not hash.hasIndex(AZ) then
break
end if
r=hash[AZ]
Aa=AI((-2 * AW),6)
Aa=AK(AX,Aa)
Aa=AI(255,Aa)
if (Aa != 0) then
Ab=(Aa - r)
if (Ab > AU.maxCharCode) then
break
end if
AD.push(char(Ab))
end if
AC=(AC + Ae)
end if
AE=(AE + Ae)
end while
return AD.join(\\"\\")
end function
d=(new W).constructor(\\"test\\")
e=\\"abcde\\"
f=d.encrypt(e)
g=d.decrypt(f)
print(f)
print(g)",
]
`;

exports[`parse default scripts random.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
Random={}
Random.pool={}
Random.defaultSeed=\\"random\\"
Random.createPool=function(seed,val)
return {\\"seed\\":seed,\\"value\\":val,\\"generation\\":0}
end function
Random.calcSeed=function(seed)
seedVal=0
pos=seed.len
for char in seed
seedVal=((seedVal + char.code) + pos)
pos=(pos - 1)
end for
return seedVal
end function
Random.gen=function(min,max,seed,inc)
me=self
pool=me.pool
if (inc == null) then
inc=true
end if
if (seed == null) then
seed=me.defaultSeed
end if
if pool.hasIndex(seed) then
ps=pool[seed]
if not inc then
return ps.value
end if
ps.generation=(ps.generation + 1)
val=floor(((rnd((ps.value + ps.generation)) * (max - min)) + min))
ps.value=val
return val
end if
seedVal=me.calcSeed(seed)
val=floor(((rnd(seedVal) * (max - min)) + min))
pool[seed]=me.createPool(seedVal,val)
return val
end function
Random.seq=function(min,max,seed,amount,keepPool)
me=self
index=0
result=[]
while (index < amount)
temp=me.gen(min,max,seed)
result.push(temp)
index=(index + 1)
end while
if (keepPool != true) then
me.pool.remove(seed)
end if
return result
end function
Random.get=function(min,max)
return self.gen(min,max)
end function
print(Random.get(100,500))
print(Random.seq(100,500,\\"test\\",10))",
]
`;

exports[`parse default scripts random.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

Random = {}
Random.pool = {}
Random.defaultSeed = \\"random\\"

Random.createPool = function(seed, val)
	return {\\"seed\\": seed, \\"value\\": val, \\"generation\\": 0}
end function

Random.calcSeed = function(seed)
	seedVal = 0
	pos = seed.len

	for char in seed
		seedVal = ((seedVal + char.code) + pos)
		pos = (pos - 1)
	end for

	return seedVal
end function

Random.gen = function(min, max, seed, inc)
	me = self
	pool = me.pool
	
	if (inc == null) then
		inc = true
	end if
	
	if (seed == null) then
		seed = me.defaultSeed
	end if

	if pool.hasIndex(seed) then
		ps = pool[seed]
		
		if not inc then
			return ps.value
		end if
		ps.generation = (ps.generation + 1)
		val = floor(((rnd((ps.value + ps.generation)) * (max - min)) + min))
		ps.value = val
		return val
	end if

	seedVal = me.calcSeed(seed)
	val = floor(((rnd(seedVal) * (max - min)) + min))
	pool[seed] = me.createPool(seedVal, val)
	return val
end function

Random.seq = function(min, max, seed, amount, keepPool)
	me = self
	index = 0
	result = []

	while (index < amount)
		temp = me.gen(min, max, seed)
		result.push(temp)
		index = (index + 1)
	end while

	
	if (keepPool != true) then
		me.pool.remove(seed)
	end if
	return result
end function

Random.get = function(min, max)
	return self.gen(min, max)
end function

print(Random.get(100, 500))
print(Random.seq(100, 500, \\"test\\", 10))",
]
`;

exports[`parse default scripts random.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I={}
I.pool={}
I.defaultSeed=\\"random\\"
I.createPool=function(Q,R)
return {\\"seed\\":Q,\\"value\\":R,\\"generation\\":0}
end function
I.calcSeed=function(Q)
S=0
T=Q.len
for char in Q
S=((S + char.code) + T)
T=(T - 1)
end for
return S
end function
I.gen=function(V,W,Q,X)
Y=self
J=Y.pool
if (X == null) then
X=true
end if
if (Q == null) then
Q=Y.defaultSeed
end if
if J.hasIndex(Q) then
Z=J[Q]
if not X then
return Z.value
end if
Z.generation=(Z.generation + 1)
R=floor(((rnd((Z.value + Z.generation)) * (W - V)) + V))
Z.value=R
return R
end if
S=Y.calcSeed(Q)
R=floor(((rnd(S) * (W - V)) + V))
J[Q]=Y.createPool(S,R)
return R
end function
I.seq=function(V,W,Q,c,d)
Y=self
e=0
f=[]
while (e < c)
g=Y.gen(V,W,Q)
f.push(g)
e=(e + 1)
end while
if (d != true) then
Y.pool.remove(Q)
end if
return f
end function
I.get=function(V,W)
return self.gen(V,W)
end function
print(I.get(100,500))
print(I.seq(100,500,\\"test\\",10))",
]
`;

exports[`parse default scripts simple-object.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
test={}
test.here=\\"was\\"
test.was=function()
print(self.here)
end function
print(test.was())",
]
`;

exports[`parse default scripts simple-object.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

test = {}
test.here = \\"was\\"

test.was = function()
	print(self.here)
end function

print(test.was())",
]
`;

exports[`parse default scripts simple-object.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I={}
I.here=\\"was\\"
I.was=function()
print(self.here)
end function
print(I.was)",
]
`;

exports[`parse default scripts slice.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
divideString=function(str,limit)
offset=0
maxLen=str.len
frags=[]
while (offset < maxLen)
next=(offset + limit)
frags.push(str[offset:next])
offset=next
end while
return frags
end function
print(divideString(\\"blahhblahhblahhblahhblahhblahhgad\\",5))",
]
`;

exports[`parse default scripts slice.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

divideString = function(str, limit)
	offset = 0
	maxLen = str.len
	frags = []

	while (offset < maxLen)
		next = (offset + limit)
		frags.push(str[offset : next])
		offset = next
	end while

	return frags
end function
print(divideString(\\"blahhblahhblahhblahhblahhblahhgad\\", 5))",
]
`;

exports[`parse default scripts slice.src uglify 1`] = `
Array [
  "globals.H=globals
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I=function(str,J)
K=0
L=str.len
N=[]
while (K < L)
O=(K + J)
N.push(str[K:O])
K=O
end while
return N
end function
print(I(\\"blahhblahhblahhblahhblahhblahhgad\\",5))",
]
`;

exports[`parse default scripts unary.src 1`] = `
Array [
  "MODULES={}
EXPORTED={}
__REQUIRE=function(r)
if not MODULES.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
module=MODULES[r]
return @module(r).exports
end function
test=function()
return null
end function
print((@\\"was\\".split and (false or not false)))
print(@(\\"was\\".split and (false or not false)))
print((not \\"was\\".split and (false or not false)))
print(not (\\"was\\".split and (false or not false)))
print((-1 + 2))
print(-(1 + 2))",
]
`;

exports[`parse default scripts unary.src beautify 1`] = `
Array [
  "MODULES = {}
EXPORTED = {}

__REQUIRE = function(r)
	if not MODULES.hasIndex(r) then
		exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
	end if

	module = MODULES[r]
	return @module(r).exports
end function

test = function()
	return null
end function

print((@\\"was\\".split and (false or not false)))
print(@(\\"was\\".split and (false or not false)))
print((not \\"was\\".split and (false or not false)))
print(not (\\"was\\".split and (false or not false)))
print((-1 + 2))
print(-(1 + 2))",
]
`;

exports[`parse default scripts unary.src uglify 1`] = `
Array [
  "globals.H=globals
H.L=\\"was\\"
H.K=false
C={}
D={}
E=function(r)
if not C.hasIndex(r) then
exit(((\\"Module \\" + r) + \\" cannot be found...\\"))
end if
G=C[r]
return @G(r).exports
end function
I=function()
return null
end function
print((@L.split and (K or not K)))
print(@(L.split and (K or not K)))
print((not L.split and (K or not K)))
print(not (L.split and (K or not K)))
print((-1 + 2))
print(-(1 + 2))",
]
`;
